fix: z-index

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -25,6 +25,7 @@ img,
 
 .audiostream-player {
   width: 100%;
+  z-index: 10;
   position: fixed;
   bottom: 0;
   height: 80px;
